2006-06-12  Johan Dahlin  <jdahlin@async.com.br>

	* examples/list/tree.py:
	Add a new example
	
	* kiwi/accessor.py:
	Fix a bug when specifying a default value

	* kiwi/ui/objectlist.py:
	Add ObjectTree

2006-06-12  Ronaldo Maia  <romaia@async.com.br>
	
	reviewed by: Johan Dahlin  <jdahlin@async.com.br>

	* examples/framework/color/completion.py:
	* kiwi/ui/comboentry.py:
	* kiwi/ui/entry.py:
	* kiwi/ui/entrycompletion.py:
	* kiwi/ui/widgets/entry.py:
	Add KiwiEntryCompletion, that suports custom popup window and treeview, and
	make ComboEntry use this completion.	

2006-06-05  Johan Dahlin  <jdahlin@async.com.br>

	* tests/test_datatypes.py: Import Decimal from datatypes so the tests
	will pass on 2.3

	* kiwi/datatypes.py: Make decimal support conditional

2006-06-01  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/proxy.py:
	* kiwi/ui/proxywidget.py:
	* kiwi/ui/views.py:
	Treat invisible and insensitive widgets specially, eg, do not
	validate them and do not update the value in the model.

2006-05-31  Johan Dahlin  <jdahlin@async.com.br>

	* tests/test_datatypes.py (CurrencyTest.testFormatBR): Add a test 
	and clean up locale handling in other tests.

	* kiwi/datatypes.py (filter_locale): Add a monetary parameter, which
	takes into account the monetary data.

	* kiwi/datatypes.py (currency.__new__): 
	Use filter_locale with monetary=True here, fixes #2632

2006-05-24  David Cook  <dave@davidcook.org>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/objectlist.py: Optimize refresh(), fixes #2612

2006-05-24  David Cook  <dave@davidcook.org>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/objectlist.py: Add a sorted keyword, fixes #2611

2006-05-24  David Cook  <dave@davidcook.org>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/objectlist.py: Remove unnecessary on_column__clicked handler,
	fixes #2610

2006-05-04  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/dist.py: Add support for templates
